SONARPY-1036 S2245 covers more methods of "random"